package com.padroes.abstractfactory.produtos;

public interface Botao {
    String renderizar();
    String clicar();
}
