package com.padroes.abstractfactory.produtos;

public interface CaixaSelecao {
    String renderizar();
    boolean alternarEstado();
    boolean estaMarcada();
}
